Add result and tournament msg, and score tracker

--- a/index.html
+++ b/index.html
@@ -15,5 +15,24 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
+    <div id="result-container">
+        <h2>Result</h2>
+        <h3 id="result-msg"></h3>
+        <h3 id="winner-msg"></h3>
+    </div>
+    <div id="score-container">
+        <h3>Scores</h3>
+        <div id="player-comp-container">
+            <div>
+                <h4>Player</h4>
+                <h3 id="player-score">0</h3>
+            </div>
+            <div>
+                <h4>Computer</h4>
+                <h3 id="computer-score">0</h3>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
